--- a/src/signup/index.html
+++ b/src/signup/index.html
@@ -39,33 +39,28 @@
 
             <label for="HS" class="sr-only">High School</label>
             <input type="text" id="HS" class="form-control" placeholder="High School" required>
-            <br>
 
             <label for="Grade" class="sr-only">Grade</label>
             <input type="text" id="Grade" class="form-control" placeholder="Grade" required>
-            <br>
 
             <label for="email" class="sr-only">Email</label>
             <input type="email" id="email" class="form-control" placeholder="Email" required>
-            <br>
 
             <label for="User" class="sr-only">Username</label>
             <input type="text" id="User" class="form-control" placeholder="Username" required>
-            <br>
 
             <label for="PW" class="sr-only">Password</label>
             <input type="password" id="PW" class="form-control" placeholder="Password" required>
-            <br>
 
             <label for="CPW" class="sr-only">Confirm Password</label>
             <input type="password" id="CPW" class="form-control" placeholder="Confirm Password" required>
             <span id="message"></span>
-            <br>
 
             <button class="btn btn-lg btn-secondary" type="submit">Create Your Account</button>
 
             <p>Already have an account? <span><a href="../login/index.html">Click here</a></span> to go back</p>
 
+            <p>&copy; 2020</p>
           </div>
         </form>
       </div>
