--- a/src/login/forgot/pass/forgot_pass.html
+++ b/src/login/forgot/pass/forgot_pass.html
@@ -1,12 +1,35 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Spinnaker&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+
+    <title>The Mindful Applicant</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <!-- Custom styles for this template -->
+    <link href="styles.css" rel="stylesheet">
   </head>
-  <body>
-    <div>
-      <h1 style="background-color:blue">Hello!</h1>
-    </div>
+
+  <body class="text-center">
+    <form class="form-signin">
+      <h1 class="h3 mb-3 font-weight-normal greeting">Enter your username to reset your password!</h1>
+
+      <label for="inputEmail" class="sr-only">username</label>
+      <input type="email" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
+
+
+      <button class="btn btn-lg btn-primary btn-block signin_button" type="submit">Reset Password</button>
+
+      <br>
+      <p class="mt-5 mb-3">&copy; 2020</p>
+    </form>
   </body>
 </html>
