--- a/src/signup/index.html
+++ b/src/signup/index.html
@@ -46,8 +46,8 @@
             <label for="email" class="sr-only">Email</label>
             <input type="email" id="email" class="form-control" placeholder="Email" required>
 
-            <!-- <label for="User" class="sr-only">Username</label>
-            <input type="text" id="User" class="form-control" placeholder="Username" required> -->
+            <label for="User" class="sr-only">Username</label>
+            <input type="text" id="User" class="form-control" placeholder="Username" required>
 
             <label for="PW" class="sr-only">Password</label>
             <input type="password" id="PW" class="form-control" placeholder="Password" required>
@@ -55,7 +55,6 @@
             <label for="CPW" class="sr-only">Confirm Password</label>
             <input type="password" id="CPW" class="form-control" placeholder="Confirm Password" required>
             <span id="message"></span>
-            <br>
 
             <button class="btn btn-lg btn-secondary" type="submit">Create Your Account</button>
 
