--- a/src/login/index.html
+++ b/src/login/index.html
@@ -7,7 +7,8 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Spinnaker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    
+    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+
     <title>The Mindful Applicant</title>
 
     <!-- Bootstrap core CSS -->
